Rebuild CPU